# vim: set noexpandtab:

CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
PROJECT(opencdev)

ENABLE_TESTING()

EXECUTE_PROCESS(
	COMMAND git submodule init
	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
	)
EXECUTE_PROCESS(
	COMMAND git submodule update
	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
	)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR})

# workaround for
# http://stackoverflow.com/questions/9948375/cmake-find-package-succeeds-but-returns-wrong-path
SET(Boost_NO_BOOST_CMAKE ON)

FIND_PACKAGE(Sqlite3)
FIND_PACKAGE(Boost 1.41 REQUIRED filesystem unit_test_framework)

ADD_SUBDIRECTORY(contrib)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(examples)
ADD_SUBDIRECTORY(tests)

IF(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
ELSE()
	SET(OPENCDEV_INCLUDE_DIR ${OPENCDEV_INCLUDE_DIR} PARENT_SCOPE)
	SET(OPENCDEV_LIBRARIES ${OPENCDEV_LIBRARIES} PARENT_SCOPE)
ENDIF()
