# vim: set noexpandtab:

INCLUDE_DIRECTORIES(${SDDS_INCLUDE_DIR})

ADD_LIBRARY(
	opencdev
	SHARED
	DB.cxx
	DB_p.cxx
	SqliteDriver.cxx
	)

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(opencdev
	${SDDS3_LIBRARIES}
	${SQLITE3_LIBRARIES}
	${Boost_LIBRARIES}
	)

ADD_DEFINITIONS("-Wall -pedantic")

IF(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
ELSE()
	SET(OPENCDEV_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
ENDIF()
