# vim: set noexpandtab:

INCLUDE_DIRECTORIES(${SDDS_INCLUDE_DIR})

ADD_LIBRARY(
	opencdev
	SHARED
	LocalLogReader.cxx
	LocalLogReader_p.cxx
	LogReader.cxx
	SqliteDriver.cxx
	)

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(opencdev
	${SDDS_LIBRARIES}
	${SQLITE3_LIBRARIES}
	${Boost_LIBRARIES}
	)

ADD_DEFINITIONS("-Wall -pedantic")

SET(OPENCDEV_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
SET(OPENCDEV_LIBRARIES opencdev PARENT_SCOPE)
